<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>de.qtc.rmg</groupId>
    <artifactId>remote-method-guesser</artifactId>
    <name>remote-method-guesser</name>
    <packaging>jar</packaging>
    <version>3.2.0</version>
    <description>Identify common misconfigurations on Java RMI endpoints</description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>

    <dependencies>

        <dependency>
            <groupId>commons-cli</groupId>
            <artifactId>commons-cli</artifactId>
            <version>1.4</version>
        </dependency>
        
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.8.0</version>
        </dependency>

        <dependency>
            <groupId>org.javassist</groupId>
            <artifactId>javassist</artifactId>
            <version>3.27.0-GA</version>
        </dependency>

    </dependencies>

    <build>

        <sourceDirectory>src</sourceDirectory>

        <resources>
          <resource>
            <directory>src</directory>
            <includes>
                <include>config.properties</include>
            </includes>
          </resource>
        </resources>

        <plugins>
          <plugin>
              <artifactId>maven-assembly-plugin</artifactId>
              <executions>
                <execution>
                  <phase>package</phase>
                  <goals>
                    <goal>single</goal>
                  </goals>
                </execution>
              </executions>
              <configuration>
                <finalName>rmg-${project.version}</finalName>
                <archive>
                    <manifest>
                        <mainClass>de.qtc.rmg.Starter</mainClass>
                        <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                    </manifest>
                </archive>
                <descriptorRefs>
                  <descriptorRef>jar-with-dependencies</descriptorRef>
                </descriptorRefs>
              </configuration>
          </plugin>

          <plugin>
              <artifactId>maven-jar-plugin</artifactId>
              <version>3.2.0</version>
              <executions>
                <execution>
                   <id>default-jar</id>
                   <phase>none</phase>
                </execution>
              </executions>
          </plugin>
        </plugins>

    </build>
</project>
